Update notebooks for Colab (#40)
* Move data collection/analysis notebooks under tutorials/

* nbfmt collection/analysis notebooks

* Update data-collection notebook for colab. Add buttons.

* Update data-analysis notebook for colab. Add buttons.

* Rename qaoa tutorial filenames

* nbfmt qaoa tutorial notebooks

* Update qaoa example problems for colab. Add buttons. Add images.

* Update qaoa tasks for colab. Add buttons.

* Update qaoa precomputed-analysis for colab. Add buttons.

* Update qaoa landscape-analysis for colab. Add buttons.

* Update qaoa hardware-grid for colab. Add buttons.

* Update qaoa routing-with-tket for colab. Add buttons.

--- a/docs/_toc.yaml
+++ b/docs/_toc.yaml
@@ -3,23 +3,25 @@ toc:
   path: /quark/cirq/research
 - title: "Data collection idioms"
   path: /quark/cirq/research/data-collection-idioms
-- title: "Readout data collection"
-  path: /quark/cirq/research/Readout-Data-Collection
-- title: "Readout analysis"
-  path: /quark/cirq/research/Readout-Analysis
 - title: "Best practices"
   path: /quark/cirq/research/best-practices
 
+- heading: "Tutorials"
+- title: "Data collection"
+  path: /quark/cirq/research/tutorials/data-collection
+- title: "Data analysis"
+  path: /quark/cirq/research/tutorials/data-analysis
+
 - heading: "QAOA"
 - title: "Example problems"
-  path: /quark/cirq/research/qaoa/Example-Problems
+  path: /quark/cirq/research/qaoa/example-problems
 - title: "Tasks"
-  path: /quark/cirq/research/qaoa/Tasks-Tutorial
+  path: /quark/cirq/research/qaoa/tasks
 - title: "Precomputed analysis"
-  path: /quark/cirq/research/qaoa/Precomputed-Analysis
+  path: /quark/cirq/research/qaoa/precomputed-analysis
 - title: "Landscape analysis"
-  path: /quark/cirq/research/qaoa/Landscape-Analysis
+  path: /quark/cirq/research/qaoa/landscape-analysis
 - title: "Hardware grid circuits"
-  path: /quark/cirq/research/qaoa/hardware-grid-qaoa-circuits
-- title: "Routing with t|ket>"
-  path: /quark/cirq/research/qaoa/Routing-with-Tket
+  path: /quark/cirq/research/qaoa/hardware-grid-circuits
+- title: "Routing with tket"
+  path: /quark/cirq/research/qaoa/routing-with-tket
